kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eks-ingress-balancer-s3-testing
  labels:
    name: eks-ingress-balancer-s3-testing
